Fix action buttons table alignment

--- a/bot_backend/app/static/action-buttons.css
+++ b/bot_backend/app/static/action-buttons.css
@@ -1,12 +1,17 @@
 .actions-cell {
-  display: flex;
-  align-items: center;
-  gap: 7px;
   min-width: 168px;
+  white-space: nowrap;
+  vertical-align: middle;
 }
 
 .actions-cell form {
-  margin: 0;
+  display: inline-block;
+  margin: 0 5px 0 0;
+  vertical-align: middle;
+}
+
+.actions-cell form:last-child {
+  margin-right: 0;
 }
 
 .btn.icon-btn {
@@ -22,6 +27,7 @@
   border-color: rgba(255, 255, 255, .10);
   color: var(--soft);
   box-shadow: inset 0 1px 0 rgba(255,255,255,.04);
+  vertical-align: middle;
 }
 
 .btn.icon-btn:hover {
@@ -58,8 +64,16 @@
 
 @media (max-width: 1100px) {
   .actions-cell {
-    display: grid;
-    grid-template-columns: repeat(4, 34px);
-    min-width: 0;
+    min-width: 150px;
+  }
+
+  .actions-cell form {
+    margin-right: 4px;
+  }
+
+  .btn.icon-btn {
+    width: 32px;
+    height: 32px;
+    min-width: 32px;
   }
 }
